Added support SVG textures

--- a/textures/CMakeLists.txt
+++ b/textures/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/textures
         FILES_MATCHING PATTERN "*.png"
+        PATTERN "*.svg"
         PATTERN "CMakeFiles" EXCLUDE )
 
 
